--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "template-engine",
+  "name": "unit10hw",
   "version": "1.0.0",
-  "description": " a software engineering team generator command line application",
+  "description": "OOP and testing for week 10 homework",
   "main": "app.js",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
-
   "scripts": {
     "test": "jest --verbose test/*"
   },
-  "keywords": [
-    "node.js",
-    "jest"
-  ],
-  "author": "jeff miao",
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "jest": "^26.1.0"
-  },
   "dependencies": {
-    "inquirer": "^7.3.3"
+    "inquirer": "^6.5.2",
+    "joi": "^14.3.1"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
