--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unit10hw",
+  "name": "template-engine",
   "version": "1.0.0",
-  "description": "OOP and testing for week 10 homework",
+  "description": " a software engineering team generator command line application",
   "main": "app.js",
   "directories": {
     "lib": "lib",
@@ -10,13 +10,18 @@
   "scripts": {
     "test": "jest --verbose test/*"
   },
-  "author": "",
+  "keywords": [
+    "node.js",
+    "jest"
+  ],
+  "author": "jeff miao",
   "license": "ISC",
-  "dependencies": {
-    "inquirer": "^6.5.2",
-    "joi": "^14.3.1"
-  },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "^26.1.0"
+  },
+  "dependencies": {
+    "inquirer": "^7.3.3",
+    "joi": "^14.3.1"
   }
 }
+
