--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-engine",
+  "name": "team-template-engine",
   "version": "1.0.0",
   "description": " a software engineering team generator command line application",
   "main": "app.js",
